Fixed Accommodation's wrong spelling in all files
