# src/main/java/aiss/model/PlaceCategory.java
@@ -22,7 +22,7 @@ public enum PlaceCategory {
 	HOSPITAL,
 	POLICE,
 	TOURIST_ATTRACTION,
-	ACCOMODATION,
+	ACCOMMODATION,
 	STADIUM,
 	GAS_STATION,
 	TRAIN_STATION,
